// Copyright 2026 Supabase, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package multiorch;

import "clustermetadata.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/multigres/multigres/go/pb/multiorch";

service MultiOrchService {
  // GetShardStatus returns diagnostic information for a specific shard
  rpc GetShardStatus(ShardStatusRequest) returns (ShardStatusResponse) {}
}

message ShardStatusRequest {
  // Shard to get status for
  string database = 1;
  string table_group = 2;
  string shard = 3;
}

message ShardStatusResponse {
  // Currently detected problems for this shard
  repeated DetectedProblem problems = 1;

  // Per-pooler health details for this shard
  repeated PoolerHealth pooler_healths = 2;
}

message DetectedProblem {
  string code = 1;                           // e.g., "PrimaryIsDead"
  string check_name = 2;                     // Analyzer name
  clustermetadata.ID pooler_id = 3;          // Affected pooler
  string database = 4;
  string table_group = 5;
  string shard = 6;
  string description = 7;
  int32 priority = 8;
  string scope = 9;                          // "Shard" or "Pooler"
  google.protobuf.Timestamp detected_at = 10;
}

message PoolerHealth {
  clustermetadata.ID pooler_id = 1;
  bool reachable = 2;
  bool postgres_running = 3;
  string pooler_type = 4;                    // PRIMARY, REPLICA, UNKNOWN
  google.protobuf.Timestamp last_check = 5;
}
